manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-opentelemetry
spec:
  selector:
    matchLabels:
      app: nodejs-opentelemetry
  template:
    metadata:
      labels:
        app: nodejs-opentelemetry
    spec:
      containers:
      - name: nodejs-opentelemetry
        image: maromitamar/nodejs-opentelemetry:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Always
        # ports:
        # - containerPort: 8080
