manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-opentelemetry
  labels:
    name: nodejs-opentelemetry
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: nodejs-opentelemetry.kubernetes.white-noise.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-opentelemetry
            port: 
              number: 8080
  tls:
  - hosts:
    - nodejs-opentelemetry.kubernetes.white-noise.click
